--- a/A2_Comp_Project/app/src/main/res/values/strings.xml
+++ b/A2_Comp_Project/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="frequency">Frequency</string>
     <string name="stats_inequality"><![CDATA[<x<]]></string>
     <string name="New_Row">Add New Row</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
