--- a/A2_Comp_Project/app/src/main/res/values/strings.xml
+++ b/A2_Comp_Project/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">A2_Comp_Project</string>
+    <string name="app_name">Graphify</string>
     <string name="action_settings">Settings</string>
     <string name="button_2d">2D Graph</string>
     <string name="button_3d">3D Graph</string>
@@ -12,4 +12,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="title_activity_main3_dvr">Main3DVRActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_intemediary3_d">Intemediary3D</string>
+    <string name="title_activity_tabbed_stats">TabbedStatsActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
